# mola_sm_loop_closure

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
apps/: mola-sm-georeferencing-cli.cpp  mola-sm-lc-cli.cpp  mola-trajectory-georef-cli.cpp
module/include/mola_sm_loop_closure/: SimplemapLoopClosure.h  simplemap_georeference.h
module/src/: FactorGNNS2ENU.h  FactorGNSS2ENU.h  SimplemapLoopClosure.cpp  simplemap_georeference.cpp
pipelines/: loop-closure-lidar2d.yaml  loop-closure-lidar3d-large-submaps.yaml  loop-closure-lidar3d-voxels.yaml  loop-closure-lidar3d.yaml  map-refine-lidar3d.yaml
