<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- This is a ROS package file, intended to allow this library to be built
     side-by-side to ROS packages in a catkin/ament environment.
-->
<package format="3">
  <name>mola_sm_loop_closure</name>
  <version>0.1.0</version>
  <description>Simplemap loop-closure postprocessing library and CLI tool</description>

  <maintainer email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</maintainer>
  <license>GPLv3</license>

  <url type="website">https://docs.mola-slam.org/</url>
  <url type="repository">https://github.com/MOLAorg/mola_lidar_odometry/</url>

  <author email="joseluisblancoc@gmail.com">Jose-Luis Blanco-Claraco</author>

  <depend>mola_common</depend>
  <depend>mola_yaml</depend>
  <depend>mp2p_icp</depend>
  <depend>mola_pose_list</depend>
  <depend>mola_relocalization</depend>

  <depend>mrpt_libtclap</depend>
  <depend>mrpt_libmaps</depend>
  <depend>mrpt_libgui</depend>

  <depend>gtsam</depend>

  <doc_depend>doxygen</doc_depend>

  <!-- Minimum entries to release non-catkin pkgs: -->
  <buildtool_depend>cmake</buildtool_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
  <!-- End -->


</package>
